--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <ul class="tipos">
                     <li class="tipo download"><a href="src/files/IBPT.sql" target="_blank">Download</a></li>
                 </ul>
-                <p class="descricao">Tabela IBPT atual</p>
+                <p class="descricao">Tabela IBPT 24.2D</p>
             </li>
             <li class="cartao-download">
                 <div class="informacoes">
