--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
             </li>
             <li class="cartao-download">
                 <div class="informacoes">
-                    <span>Tabela IBPT</span>
+                    <span>Versão beta</span>
+                    <span>11.10</span>
                 </div>
-                <img src="./src/imagens/exe.png" alt="ibpt" class="gif">
+                <img src="./src/imagens/atualizacao-do-sistema.png" alt="atualização" class="gif">
                 <ul class="tipos">
-                    <li class="tipo download"><a href="src/files/IBPT.sql" target="_blank">Download</a></li>
+                    <li class="tipo download"><a href="src/files/Atualizacao_beta.rar" target="_blank">Download</a></li>
                 </ul>
-                <p class="descricao">Tabela IBPT 24.2D</p>
+                <p class="descricao">Versão 2410.1.</p>
             </li>
             <li class="cartao-download">
                 <div class="informacoes">
