--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                 </div>
                 <img src="./src/imagens/atualizacao-do-sistema.png" alt="atualização" class="gif">
                 <ul class="tipos">
-                    <li class="tipo download"><a href="src/files/Atualizacao_beta.rar" target="_blank">Download</a></li>
+                    <li class="tipo download"><a href="" target="_blank">Download</a></li>
                 </ul>
-                <p class="descricao">Versão 2411.1.</p>
+                <p class="descricao">Nenhuma versão aqui.</p>
             </li>
             <li class="cartao-download">
                 <div class="informacoes">
