--- a/index.html
+++ b/index.html
@@ -1,58 +1,154 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Erro Crítico</title>
-    <!-- Inclui Tailwind CSS para estilização fácil e responsiva -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            /* Fundo de cor sólida para indicar erro */
-            background-color: #ef4444; /* Um vermelho vibrante */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            padding: 1rem;
-        }
-        /* Animação para o ícone de alerta (opcional, para dar um "pulsar") */
-        @keyframes pulse-alert {
-            0%, 100% {
-                transform: scale(1);
-                opacity: 1;
-            }
-            50% {
-                transform: scale(1.05);
-                opacity: 0.9;
-            }
-        }
-        .animate-pulse-alert {
-            animation: pulse-alert 1.5s infinite alternate;
-        }
-    </style>
+    <title>Painel do Suporte</title>
+    <script src="./src/js/info.js"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/estilos.css">
+    <link rel="stylesheet" href="./src/css/scrollbar.css">
 </head>
 <body>
-    <div class="bg-white p-8 rounded-xl shadow-lg text-center max-w-md w-full border-4 border-red-700">
-        <!-- Ícone de alerta (ponto de exclamação) -->
-        <svg class="mx-auto h-20 w-20 text-red-600 mb-6 animate-pulse-alert" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75s-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm8.706-1.442c1.146-.573 2.437.463 2.126 1.706l-.709 2.836.042.02a.75.75 0 01.643 1.173c-.946 1.097-2.731 1.097-3.678 0a.75.75 0 01.643-1.173l.042-.02-.709-2.836c-.31-.123-.376-.364-.424-.523A.75.75 0 0110.956 12h-1.5a.75.75 0 01-.75-.75V8.25a.75.75 0 01.75-.75h1.5a.75.75 0 01.75.75v2.25z" clip-rule="evenodd" />
-        </svg>
+    <header>
+        <a href="src/pages/changelog.html" target="_blank">
+            <img src="./src/imagens/rolagem.png" alt="pokebola" class="logo">
+        </a>
+        <button id="botao-alterar-tema">
+            <img src="./src/imagens/sun.png" alt="imagem do sol" class="imagem-botao">
+        </button>
+    </header>
+    <main>
+        <ul class="listagem-download">
+            <li class="cartao-download">
+                <div class="informacoes">
+                    <span>Instalador</span>
+                </div>
+                <img src="./src/imagens/instalar.png" alt="instalador" class="gif">
+                <ul class="tipos">
+                    <li class="tipo download"><a href="src/files/BitmaxInstall_Empresarial.rar" target="_blank">Download</a></li>
+                </ul>
+                <p class="descricao">Instalação do sistema.</p>
+            </li>
+            <li class="cartao-download">
+                <div class="informacoes">
+                    <span>Atualização</span>
+                    <span>04.07</span>
+                </div>
+                <img src="./src/imagens/atualizacao-do-sistema.png" alt="atualização" class="gif">
+                <ul class="tipos">
+                    <li class="tipo download"><a href="#" onclick="baixarArquivos()">Download</a></li>
+                </ul>
+                <p class="descricao">Versão 2504.1. Extraia o arquivo part1.rar</p>
+            </li>
+            <li class="cartao-download">
+                <div class="informacoes">
+                    <span>Firebird</span>
+                </div>
+                <img src="./src/imagens/armazenamento-de-banco-de-dados.png" alt="firebird" class="gif">
+                <ul class="tipos">
+                    <li class="tipo download"><a href="src/files/exe/Instalador_Firebird.exe" target="_blank">Download</a></li>
+                </ul>
+                <p class="descricao">Instalador do Firebird.</p>
+            </li>
+            <li class="cartao-download">
+                <div class="informacoes">
+                    <span>Versão beta</span>
+                    <span>14.11</span>
+                </div>
+                <img src="./src/imagens/atualizacao-do-sistema.png" alt="atualização" class="gif">
+                <ul class="tipos">
+                    <li class="tipo download"><a href="" target="_blank">Download</a></li>
+                </ul>
+                <p class="descricao">Nenhuma versão aqui.</p>
+            </li>
+            <li class="cartao-download">
+                <div class="informacoes">
+                    <span>IBExpert</span>
+                </div>
+                <img src="./src/imagens/tabela-de-banco-de-dados.png" alt="ibexpert" class="gif">
+                <ul class="tipos">
+                    <li class="tipo download"><a href="src/files/exe/ibexpert.exe" target="_blank">Download</a></li>
+                </ul>
+                <p class="descricao">Exe do IBExpert</p>
+            </li>
+            <li class="cartao-download">
+                <div class="informacoes">
+                    <span>BAT</span>
+                </div>
+                <img src="./src/imagens/prompt.png" alt="cmd" class="gif">
+                <ul class="tipos">
+                    <li class="tipo download"><a href="src/files/update.bat" target="_blank">Download</a></li>
+                </ul>
+                <p class="descricao">Atualizador bat.</p>
+            </li>
+            <li class="cartao-download">
+                <div class="informacoes">
+                    <span>Rotina Backup</span>
+                </div>
+                <img src="./src/imagens/copia-de-seguranca.png" alt="backup" class="gif">
+                <ul class="tipos">
+                    <li class="tipo download"><a href="src/files/Backup.rar" target="_blank">Download</a></li>
+                </ul>
+                <p class="descricao">Rotina de Backup.</p>
+            </li>
+            <li class="cartao-download">
+                <div class="informacoes">
+                    <span>Manual</span>
+                </div>
+                <img src="./src/imagens/manual.png" alt="manual" class="gif">
+                <ul class="tipos">
+                    <li class="tipo download"><a href="src/files/pdf/Manual Bitmax.chm" target="_blank">Download</a></li>
+                </ul>
+                <p class="descricao">Manual completo do sistema.</p>
+            </li>
+            <li class="cartao-download">
+                <div class="informacoes">
+                    <span>PDF</span>
+                </div>
+                <img src="./src/imagens/pdf.png" alt="pdf" class="gif">
+                <ul class="tipos">
+                    <li class="tipo download"><a href="src/pages/pdf.html">Ir para PDF</a></li>
+                </ul>
+                <p class="descricao">Tutoriais em PDF.</p>
+            </li>
+            <li class="cartao-download">
+                <div class="informacoes">
+                    <span>VIDEOS</span>
+                </div>
+                <img src="./src/imagens/aula-de-video.png" alt="videos" class="gif">
+                <ul class="tipos">
+                    <li class="tipo download"><a href="src/pages/videos.html">Ir para Vídeos</a></li>
+                </ul>
+                <p class="descricao">Tutoriais em vídeos.</p>
+            </li>
+        </ul>
+    </main>
+    <script src="./src/js/index.js"></script>
+    <script>
+    function baixarArquivos() {
+        const arquivos = [
+            'src/files/Atualizacao.part1.rar', 
+            'src/files/Atualizacao.part2.rar'
+        ];
 
-
-        <h1 class="text-4xl font-extrabold text-red-800 mb-4">ERRO CRÍTICO!</h1>
-        <p class="text-gray-700 mb-6 text-lg">
-            Lamentamos informar que ocorreu um erro crítico e inesperado no nosso sistema.
-            Estamos trabalhando para identificar e resolver a causa o mais rápido possível.
-        </p>
-        <p class="text-gray-700 mb-6 text-lg">
-            Agradecemos a sua paciência enquanto restauramos o serviço.
-        </p>
-        <div class="text-sm text-gray-500">
-            Por favor, tente novamente mais tarde ou entre em contato com o suporte se o problema persistir.
-        </div>
-    </div>
+        arquivos.forEach((arquivo, index) => {
+        setTimeout(() => {
+            const link = document.createElement("a");
+            link.href = arquivo;
+            link.download = ""; // Força o download
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+        }, index * 1000); // Adiciona um atraso de 1 segundo entre os downloads
+    });
+    }
+    </script>
 </body>
 </html>
