--- a/index.html
+++ b/index.html
@@ -128,6 +128,16 @@
                 </ul>
                 <p class="descricao">Tutoriais em vídeos.</p>
             </li>
+            <li class="cartao-download">
+                <div class="informacoes">
+                    <span>FAQ</span>
+                </div>
+                <img src="./src/imagens/aula-de-video.png" alt="videos" class="gif">
+                <ul class="tipos">
+                    <li class="tipo download"><a href="faq.html">Ir para FAQ</a></li>
+                </ul>
+                <p class="descricao">Perguntas frequentes.</p>
+            </li>
         </ul>
     </main>
     <script src="./src/js/index.js"></script>
