--- a/faq.html
+++ b/faq.html
@@ -78,7 +78,8 @@
                         { type: 'text', value: '<strong>1. Acesse o cadastro do subgrupo do produto:</strong> Comece o processo de cadastro.' },
                         { type: 'text', value: '<strong>2. Localize a opção "Controla Estoque":</strong> Encontre a configuração relacionada ao controle de estoque.' },
                         { type: 'text', value: '<strong>3. Desmarque essa opção:</strong> Selecione "Não" para desativar o controle de estoque.' },
-                        { type: 'text', value: 'Ao realizar esses passos, o sistema não afetará o estoque do produto com entradas ou saídas. Assim, o estoque nunca ficará negativo, mesmo que a opção de estoque negativo esteja habilitada.' }
+                        { type: 'text', value: '<strong>4. Habilite a opção de estoque negativo:</strong> Selecione "Sim" para permitir que o estoque fique negativo.' },
+                        { type: 'text', value: 'Ao realizar esses passos, o sistema não afetará o estoque do produto com entradas ou saídas. Assim, o estoque poderá ficar negativo, mesmo que a opção de estoque negativo esteja habilitada.' }
                     ]
                 },
                 {
