Update FAQ and index files; remove outdated scripts and binaries. Changed operation indicator in FAQ from 2 to 1, updated version number in index.html to 31.10, and deleted obsolete files related to the 23.10.2025 update.

--- a/faq.html
+++ b/faq.html
@@ -1326,8 +1326,9 @@
                             "<li>Configure na aba 3 do faturamento:</li>" +
                             "<li>Presença do comprador: 1</li>" +
                             "<li>Destino da Operação: 1</li>" +
-                            "<li>Indicador da operação: 2</li>" +
-                            "</ol>" }
+                            "<li>Indicador da operação: 1</li>" +
+                            "</ol>" },
+                        { type: "text", value: "<strong>Exceção 2:</strong> Se a tag modFrete (id:X02) foi informada com 9 - Sem frete: CFOP iniciado com 5 é válido. (NT 2011/004). <br> Pois só pode usar essa combinação se o tipo de frete for igual a 9, ou seja, Sem cobrança de frete e não pode informar a transportadora no pedido." }
                     ]
                 },
                 {
