Update changelog for 05/11/2025; modify index.html to reflect new version; add new update files and remove outdated scripts and binaries. Addressed inventory adjustments, report filters, and implemented NFC-e features.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li class="cartao-download">
                 <div class="informacoes">
                     <span>Atualização</span>
-                    <span>31.10</span>
+                    <span>05.11</span>
                 </div>
                 <img src="./src/imagens/atualizacao-do-sistema.png" alt="atualização" class="gif">
                 <ul class="tipos">
@@ -145,7 +145,8 @@
     function baixarArquivos() {
         const arquivos = [
             'src/files/Atualizacao.part1.rar', 
-            'src/files/Atualizacao.part2.rar'
+            'src/files/Atualizacao.part2.rar',
+            'src/files/Atualizacao.part3.rar'
         ];
 
         arquivos.forEach((arquivo, index) => {
