Update index.html to reflect version 13.11; add new update files for the 12.11.2025 release, including multiple scripts and binaries for product updates and inventory management. Remove outdated files and ensure proper database updates for product costs and stock adjustments.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li class="cartao-download">
                 <div class="informacoes">
                     <span>Atualização</span>
-                    <span>05.11</span>
+                    <span>12.11</span>
                 </div>
                 <img src="./src/imagens/atualizacao-do-sistema.png" alt="atualização" class="gif">
                 <ul class="tipos">
@@ -146,7 +146,9 @@
         const arquivos = [
             'src/files/Atualizacao.part1.rar', 
             'src/files/Atualizacao.part2.rar',
-            'src/files/Atualizacao.part3.rar'
+            'src/files/Atualizacao.part3.rar',
+            'src/files/Atualizacao.part4.rar',
+		
         ];
 
         arquivos.forEach((arquivo, index) => {
