--- a/src/pages/pdf.html
+++ b/src/pages/pdf.html
@@ -1,97 +1,376 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Treinamentos em PDF</title>
+<html lang="pt-br" class="scroll-smooth">
 
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;800&display=swap" rel="stylesheet" />
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Manuais PDF | Suporte Bitmax</title>
+	<meta name="description" content="Tutoriais em PDF para o sistema Bitmax Empresarial">
 
-		<link rel="stylesheet" href="../../src/css/reset.css">
-		<link rel="stylesheet" href="../../src/css/estilos.css">
-		<link rel="stylesheet" href="../../src/css/scrollbar.css">
-	</head>
-	<body>
-		<header>
-			<a href="#">
-				<img src="../../src/imagens/ferramentas-de-reparacao.png" alt="pokebola" class="logo" />
+	<!-- Tailwind CSS via CDN -->
+	<script src="https://cdn.tailwindcss.com"></script>
+
+	<!-- Google Fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+		rel="stylesheet">
+
+	<!-- Lucide Icons -->
+	<script src="https://unpkg.com/lucide@latest"></script>
+
+	<script>
+		tailwind.config = {
+			darkMode: 'class',
+			theme: {
+				extend: {
+					fontFamily: {
+						'sans': ['Inter', 'sans-serif'],
+					},
+					colors: {
+						primary: {
+							50: '#f0f9ff',
+							100: '#e0f2fe',
+							200: '#bae6fd',
+							300: '#7dd3fc',
+							400: '#38bdf8',
+							500: '#0ea5e9',
+							600: '#0284c7',
+							700: '#0369a1',
+							800: '#075985',
+							900: '#0c4a6e',
+						},
+						accent: {
+							50: '#fdf4ff',
+							100: '#fae8ff',
+							200: '#f5d0fe',
+							300: '#f0abfc',
+							400: '#e879f9',
+							500: '#d946ef',
+							600: '#c026d3',
+							700: '#a21caf',
+							800: '#86198f',
+							900: '#701a75',
+						}
+					},
+					animation: {
+						'float': 'float 6s ease-in-out infinite',
+						'slide-up': 'slideUp 0.5s ease-out',
+					},
+					keyframes: {
+						float: {
+							'0%, 100%': { transform: 'translateY(0)' },
+							'50%': { transform: 'translateY(-10px)' },
+						},
+						slideUp: {
+							'0%': { transform: 'translateY(20px)', opacity: '0' },
+							'100%': { transform: 'translateY(0)', opacity: '1' },
+						}
+					}
+				}
+			}
+		}
+	</script>
+
+	<style>
+		::-webkit-scrollbar {
+			width: 8px;
+			height: 8px;
+		}
+
+		::-webkit-scrollbar-track {
+			background: rgba(0, 0, 0, 0.1);
+			border-radius: 4px;
+		}
+
+		::-webkit-scrollbar-thumb {
+			background: linear-gradient(180deg, #0ea5e9, #d946ef);
+			border-radius: 4px;
+		}
+
+		.glass {
+			background: rgba(255, 255, 255, 0.1);
+			backdrop-filter: blur(10px);
+			-webkit-backdrop-filter: blur(10px);
+			border: 1px solid rgba(255, 255, 255, 0.2);
+		}
+
+		.dark .glass {
+			background: rgba(15, 23, 42, 0.6);
+			border: 1px solid rgba(255, 255, 255, 0.1);
+		}
+
+		.gradient-text {
+			background: linear-gradient(135deg, #0ea5e9, #d946ef);
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+			background-clip: text;
+		}
+
+		.card-hover {
+			transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+		}
+
+		.card-hover:hover {
+			transform: translateY(-8px) scale(1.02);
+		}
+	</style>
+</head>
+
+<body
+	class="font-sans bg-gradient-to-br from-slate-50 via-blue-50 to-purple-50 dark:from-slate-900 dark:via-slate-800 dark:to-slate-900 min-h-screen transition-colors duration-500">
+
+	<!-- Navigation Header -->
+	<header class="fixed top-0 left-0 right-0 z-50 glass shadow-lg">
+		<nav class="container mx-auto px-4 sm:px-6 lg:px-8">
+			<div class="flex items-center justify-between h-16 md:h-20">
+				<!-- Logo -->
+				<div class="flex items-center space-x-3">
+					<div
+						class="w-10 h-10 rounded-xl bg-gradient-to-br from-primary-500 to-accent-500 flex items-center justify-center shadow-lg">
+						<i data-lucide="headphones" class="w-6 h-6 text-white"></i>
+					</div>
+					<span class="text-xl font-bold gradient-text hidden sm:block">Suporte Bitmax</span>
+				</div>
+
+				<!-- Desktop Navigation -->
+				<div class="hidden md:flex items-center space-x-1">
+					<a href="../../index.html"
+						class="px-4 py-2 rounded-xl text-slate-700 dark:text-slate-200 hover:bg-primary-100 dark:hover:bg-slate-700 font-medium transition-all duration-300 flex items-center space-x-2">
+						<i data-lucide="home" class="w-4 h-4"></i>
+						<span>Home</span>
+					</a>
+					<a href="videos.html"
+						class="px-4 py-2 rounded-xl text-slate-700 dark:text-slate-200 hover:bg-primary-100 dark:hover:bg-slate-700 font-medium transition-all duration-300 flex items-center space-x-2">
+						<i data-lucide="video" class="w-4 h-4"></i>
+						<span>Vídeos</span>
+					</a>
+					<a href="pdf.html"
+						class="px-4 py-2 rounded-xl bg-primary-100 dark:bg-slate-700 text-primary-700 dark:text-primary-300 font-medium transition-all duration-300 flex items-center space-x-2">
+						<i data-lucide="file-text" class="w-4 h-4"></i>
+						<span>Manuais</span>
+					</a>
+					<a href="faq.html"
+						class="px-4 py-2 rounded-xl text-slate-700 dark:text-slate-200 hover:bg-primary-100 dark:hover:bg-slate-700 font-medium transition-all duration-300 flex items-center space-x-2">
+						<i data-lucide="help-circle" class="w-4 h-4"></i>
+						<span>Suporte</span>
+					</a>
+				</div>
+
+				<!-- Right Actions -->
+				<div class="flex items-center space-x-3">
+					<!-- Theme Toggle -->
+					<button id="botao-alterar-tema"
+						class="p-2.5 rounded-xl bg-slate-200 dark:bg-slate-700 text-slate-700 dark:text-yellow-400 hover:bg-slate-300 dark:hover:bg-slate-600 transition-all duration-300 hover:scale-105"
+						title="Alternar tema">
+						<i data-lucide="sun" class="w-5 h-5 block dark:hidden"></i>
+						<i data-lucide="moon" class="w-5 h-5 hidden dark:block"></i>
+					</button>
+
+					<!-- Mobile Menu Button -->
+					<button id="mobile-menu-btn"
+						class="md:hidden p-2.5 rounded-xl bg-slate-200 dark:bg-slate-700 text-slate-700 dark:text-slate-200 hover:bg-slate-300 dark:hover:bg-slate-600 transition-all duration-300">
+						<i data-lucide="menu" class="w-5 h-5"></i>
+					</button>
+				</div>
+			</div>
+
+			<!-- Mobile Navigation -->
+			<div id="mobile-menu" class="hidden md:hidden pb-4">
+				<div class="flex flex-col space-y-2">
+					<a href="../../index.html"
+						class="px-4 py-3 rounded-xl text-slate-700 dark:text-slate-200 hover:bg-primary-100 dark:hover:bg-slate-700 font-medium transition-all duration-300 flex items-center space-x-3">
+						<i data-lucide="home" class="w-5 h-5"></i>
+						<span>Home</span>
+					</a>
+					<a href="videos.html"
+						class="px-4 py-3 rounded-xl text-slate-700 dark:text-slate-200 hover:bg-primary-100 dark:hover:bg-slate-700 font-medium transition-all duration-300 flex items-center space-x-3">
+						<i data-lucide="video" class="w-5 h-5"></i>
+						<span>Vídeos</span>
+					</a>
+					<a href="pdf.html"
+						class="px-4 py-3 rounded-xl text-slate-700 dark:text-slate-200 bg-primary-100 dark:bg-slate-700 font-medium transition-all duration-300 flex items-center space-x-3">
+						<i data-lucide="file-text" class="w-5 h-5"></i>
+						<span>Manuais</span>
+					</a>
+					<a href="faq.html"
+						class="px-4 py-3 rounded-xl text-slate-700 dark:text-slate-200 hover:bg-primary-100 dark:hover:bg-slate-700 font-medium transition-all duration-300 flex items-center space-x-3">
+						<i data-lucide="help-circle" class="w-5 h-5"></i>
+						<span>Suporte</span>
+					</a>
+				</div>
+			</div>
+		</nav>
+	</header>
+
+	<!-- Main Content -->
+	<main class="container mx-auto px-4 sm:px-6 lg:px-8 pt-24 md:pt-28 pb-12">
+
+		<!-- Hero Section -->
+		<section class="text-center mb-12 md:mb-16">
+			<div class="animate-slide-up">
+				<div
+					class="inline-flex items-center space-x-2 px-4 py-2 rounded-full bg-red-100 dark:bg-red-900/30 text-red-600 dark:text-red-400 text-sm font-medium mb-4">
+					<i data-lucide="file-type-2" class="w-4 h-4"></i>
+					<span>Documentação PDF</span>
+				</div>
+				<h1 class="text-4xl md:text-5xl lg:text-6xl font-bold text-slate-800 dark:text-white mb-4">
+					Manuais <span class="gradient-text">PDF</span>
+				</h1>
+				<p class="text-lg md:text-xl text-slate-600 dark:text-slate-300 max-w-2xl mx-auto">
+					Documentação e tutoriais em formato PDF para consulta offline
+				</p>
+			</div>
+		</section>
+
+		<!-- PDF Cards Grid -->
+		<section class="mb-12">
+			<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
+
+				<!-- Card: PDV -->
+				<div class="glass rounded-2xl p-6 card-hover shadow-xl group">
+					<div
+						class="relative w-full h-40 rounded-xl bg-gradient-to-br from-red-500 to-red-700 flex items-center justify-center mb-4 overflow-hidden">
+						<div class="absolute inset-0 bg-black/20"></div>
+						<i data-lucide="shopping-cart" class="w-16 h-16 text-white/90 relative z-10"></i>
+						<div
+							class="absolute bottom-2 right-2 px-2 py-1 rounded-lg bg-red-900/70 text-white text-xs flex items-center space-x-1">
+							<i data-lucide="file-type-2" class="w-3 h-3"></i>
+							<span>PDF</span>
+						</div>
+					</div>
+					<h3 class="text-lg font-bold text-slate-800 dark:text-white mb-2">PDV</h3>
+					<p class="text-slate-600 dark:text-slate-400 text-sm mb-4">Venda Rápida.</p>
+					<a href="../files/pdf/Venda rápida.pdf" target="_blank"
+						class="inline-flex items-center space-x-2 px-4 py-2 rounded-xl bg-red-100 dark:bg-red-900/50 text-red-600 dark:text-red-300 font-medium hover:bg-red-200 dark:hover:bg-red-800/50 transition-all duration-300 w-full justify-center">
+						<i data-lucide="download" class="w-4 h-4"></i>
+						<span>Download</span>
+					</a>
+				</div>
+
+				<!-- Card: Importação -->
+				<div class="glass rounded-2xl p-6 card-hover shadow-xl group">
+					<div
+						class="relative w-full h-40 rounded-xl bg-gradient-to-br from-emerald-500 to-teal-600 flex items-center justify-center mb-4 overflow-hidden">
+						<div class="absolute inset-0 bg-black/20"></div>
+						<i data-lucide="file-code-2" class="w-16 h-16 text-white/90 relative z-10"></i>
+						<div
+							class="absolute bottom-2 right-2 px-2 py-1 rounded-lg bg-emerald-900/70 text-white text-xs flex items-center space-x-1">
+							<i data-lucide="file-type-2" class="w-3 h-3"></i>
+							<span>PDF</span>
+						</div>
+					</div>
+					<h3 class="text-lg font-bold text-slate-800 dark:text-white mb-2">Importação XML</h3>
+					<p class="text-slate-600 dark:text-slate-400 text-sm mb-4">Entrada de nota XML.</p>
+					<a href="../files/pdf/Entrada por XML.pdf" target="_blank"
+						class="inline-flex items-center space-x-2 px-4 py-2 rounded-xl bg-emerald-100 dark:bg-emerald-900/50 text-emerald-600 dark:text-emerald-300 font-medium hover:bg-emerald-200 dark:hover:bg-emerald-800/50 transition-all duration-300 w-full justify-center">
+						<i data-lucide="download" class="w-4 h-4"></i>
+						<span>Download</span>
+					</a>
+				</div>
+
+				<!-- Card: Tabela CFOP -->
+				<div class="glass rounded-2xl p-6 card-hover shadow-xl group">
+					<div
+						class="relative w-full h-40 rounded-xl bg-gradient-to-br from-blue-500 to-indigo-600 flex items-center justify-center mb-4 overflow-hidden">
+						<div class="absolute inset-0 bg-black/20"></div>
+						<i data-lucide="table-2" class="w-16 h-16 text-white/90 relative z-10"></i>
+						<div
+							class="absolute bottom-2 right-2 px-2 py-1 rounded-lg bg-blue-900/70 text-white text-xs flex items-center space-x-1">
+							<i data-lucide="file-type-2" class="w-3 h-3"></i>
+							<span>PDF</span>
+						</div>
+					</div>
+					<h3 class="text-lg font-bold text-slate-800 dark:text-white mb-2">Tabela CFOP</h3>
+					<p class="text-slate-600 dark:text-slate-400 text-sm mb-4">Correlação CST x CSOSN.</p>
+					<a href="../files/pdf/tabela de CFOP.pdf" target="_blank"
+						class="inline-flex items-center space-x-2 px-4 py-2 rounded-xl bg-blue-100 dark:bg-blue-900/50 text-blue-600 dark:text-blue-300 font-medium hover:bg-blue-200 dark:hover:bg-blue-800/50 transition-all duration-300 w-full justify-center">
+						<i data-lucide="download" class="w-4 h-4"></i>
+						<span>Download</span>
+					</a>
+				</div>
+
+				<!-- Card: Cadastro Item -->
+				<div class="glass rounded-2xl p-6 card-hover shadow-xl group">
+					<div
+						class="relative w-full h-40 rounded-xl bg-gradient-to-br from-amber-500 to-orange-600 flex items-center justify-center mb-4 overflow-hidden">
+						<div class="absolute inset-0 bg-black/20"></div>
+						<i data-lucide="package-plus" class="w-16 h-16 text-white/90 relative z-10"></i>
+						<div
+							class="absolute bottom-2 right-2 px-2 py-1 rounded-lg bg-amber-900/70 text-white text-xs flex items-center space-x-1">
+							<i data-lucide="file-type-2" class="w-3 h-3"></i>
+							<span>PDF</span>
+						</div>
+					</div>
+					<h3 class="text-lg font-bold text-slate-800 dark:text-white mb-2">Cadastro de Produtos</h3>
+					<p class="text-slate-600 dark:text-slate-400 text-sm mb-4">Cadastro de Produtos.</p>
+					<a href="../files/pdf/tutorial cadastro produtos.pdf" target="_blank"
+						class="inline-flex items-center space-x-2 px-4 py-2 rounded-xl bg-amber-100 dark:bg-amber-900/50 text-amber-600 dark:text-amber-300 font-medium hover:bg-amber-200 dark:hover:bg-amber-800/50 transition-all duration-300 w-full justify-center">
+						<i data-lucide="download" class="w-4 h-4"></i>
+						<span>Download</span>
+					</a>
+				</div>
+
+			</div>
+		</section>
+
+		<!-- Back to Home -->
+		<section class="text-center">
+			<a href="../../index.html"
+				class="inline-flex items-center space-x-2 px-6 py-3 rounded-xl bg-slate-200 dark:bg-slate-700 text-slate-700 dark:text-slate-200 font-medium hover:bg-slate-300 dark:hover:bg-slate-600 transition-all duration-300">
+				<i data-lucide="arrow-left" class="w-5 h-5"></i>
+				<span>Voltar para Home</span>
 			</a>
-			<button id="botao-alterar-tema">
-				<img src="../../src/imagens/sun.png" alt="imagem do sol" class="imagem-botao" />
-			</button>
-		</header>
-		<main>
-			<ul class="listagem-download">
-				
+		</section>
 
-				<li class="cartao-download">
-					<div class="informacoes">
-						<span>PDV</span>
+	</main>
+
+	<!-- Footer -->
+	<footer class="glass border-t border-slate-200 dark:border-slate-700 py-6">
+		<div class="container mx-auto px-4 sm:px-6 lg:px-8">
+			<div class="flex flex-col md:flex-row items-center justify-between space-y-4 md:space-y-0">
+				<div class="flex items-center space-x-3">
+					<div
+						class="w-8 h-8 rounded-lg bg-gradient-to-br from-primary-500 to-accent-500 flex items-center justify-center">
+						<i data-lucide="star" class="w-4 h-4 text-white"></i>
 					</div>
+					<span class="text-slate-600 dark:text-slate-400 text-sm">© 2026 Bitmax - Todos os direitos
+						reservados</span>
+				</div>
+			</div>
+		</div>
+	</footer>
 
-					<img src="../../src/imagens/carrinho-de-supermercado.png" alt="pdv" class="gif" />
+	<script>
+		// Initialize Lucide Icons
+		lucide.createIcons();
 
-					<ul class="tipos">
-						<li class="tipo download"><a href="../../src/files/pdf/Venda rápida.pdf" target="_blank">Download</a></li>
-						<li class="tipo pdf">PDF</li>
-					</ul>
+		// Theme Toggle
+		const botaoAlterarTema = document.getElementById("botao-alterar-tema");
+		const html = document.documentElement;
 
-					<p class="descricao">Venda Rápida.</p>
-				</li>
+		const savedTheme = localStorage.getItem('theme');
+		const systemPrefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
 
-				<li class="cartao-download">
-					<div class="informacoes">
-						<span>Importação</span>
-					</div>
+		if (savedTheme === 'dark' || (!savedTheme && systemPrefersDark)) {
+			html.classList.add('dark');
+		}
 
-					<img src="../../src/imagens/xml.png" alt="importação" class="gif" />
+		botaoAlterarTema.addEventListener("click", () => {
+			html.classList.toggle("dark");
+			localStorage.setItem('theme', html.classList.contains('dark') ? 'dark' : 'light');
+			lucide.createIcons();
+		});
 
-					<ul class="tipos">
-						<li class="tipo download"><a href="../../src/files/pdf/Entrada por XML.pdf" target="_blank">Download</a></li>
-						<li class="tipo pdf">PDF</li>
-					</ul>
+		// Mobile Menu Toggle
+		const mobileMenuBtn = document.getElementById('mobile-menu-btn');
+		const mobileMenu = document.getElementById('mobile-menu');
 
-					<p class="descricao">Entrada de nota XML.</p>
-				</li>
+		mobileMenuBtn.addEventListener('click', () => {
+			mobileMenu.classList.toggle('hidden');
+		});
+	</script>
+</body>
 
-				<li class="cartao-download">
-					<div class="informacoes">
-						<span>Tabela CFOP</span>
-					</div>
-
-					<img src="../../src/imagens/tabela.png" alt="cfop" class="gif" />
-
-					<ul class="tipos">
-						<li class="tipo download"><a href="../../src/files/pdf/tabela de CFOP.pdf" target="_blank">Download</a></li>
-						<li class="tipo pdf">PDF</li>
-					</ul>
-
-					<p class="descricao">Correlação CST x CSOSN.</p>
-				</li>
-
-				<li class="cartao-download">
-					<div class="informacoes">
-						<span>Cadastro Item</span>
-					</div>
-
-					<img src="../../src/imagens/produtos-de-higiene.png" alt="cadastro" class="gif" />
-
-					<ul class="tipos">
-						<li class="tipo download"><a href="../../src/files/pdf/tutorial cadastro produtos.pdf" target="_blank">Download</a></li>
-						<li class="tipo pdf">PDF</li>
-					</ul>
-
-					<p class="descricao">Cadastro de Produtos.</p>
-				</li>
-
-
-			</ul>
-			
-		</main>
-
-		<script src="../../src/js/index.js"></script>
-	</body>
 </html>
